[package]
name = "microdon"
version = "0.1.0"
authors = ["William Stevens <contact@wastevensv.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "microdon"
path = "src/lib.rs"

[[bin]]
name = "web"
required-features = ["web"]


[[bin]]
name = "cli"
required-features = ["cli"]

[features]
default = ["cli", "web"]
cli = ["clap", "tokio", "pretty_env_logger"]
web = ["actix-web", "actix-rt", "futures", "pretty_env_logger"]

[dependencies]
diesel = { version = "1.4", features = ["r2d2", "postgres", "serde_json"] }
r2d2 = "0.8"
diesel_migrations = { version = "1.4", features = ["postgres"] }
dotenv = "0.9.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
reqwest = { version = "0.10", features = ["blocking", "json"] }
pretty_env_logger = { version = "0.4", optional=true }
log = "0.4"
clap = { version = "2", optional=true }
actix-rt = { version = "1.0", optional=true }
actix-web = { version = "2.0", optional=true }
futures = { version = "0.3", optional=true }
tokio = { version = "0.2.22", optional=true, features=["macros"] }
